test/sema/typeck/infer-type-class-constructor-err.out
error: Argument expects value of type `Bool` but got `Int32`.
--> infer-type-class-constructor-err.dora:10:12
 | 
 | fn expectedConflict(): Box[Bool] {
 |     Box[_](1i32)
              ~~~~
 | }
 | 
error: cannot infer type.
--> infer-type-class-constructor-err.dora:14:31
 | 
 | fn main() {
 |     let _unresolved = Phantom[_]();
                                 ~
 |     let _conflict = Same[_](1i32, true);
 |     let _invalidBound = Bounded[_](DoesNotImplementTrait());
error: Argument expects value of type `Int32` but got `Bool`.
--> infer-type-class-constructor-err.dora:15:35
 | fn main() {
 |     let _unresolved = Phantom[_]();
 |     let _conflict = Same[_](1i32, true);
                                     ~~~~
 |     let _invalidBound = Bounded[_](DoesNotImplementTrait());
 |     let _wrongArity = Box[Int32, Bool](unknown);
error: type `DoesNotImplementTrait` does not implement trait `Trait`.
--> infer-type-class-constructor-err.dora:16:25
 |     let _unresolved = Phantom[_]();
 |     let _conflict = Same[_](1i32, true);
 |     let _invalidBound = Bounded[_](DoesNotImplementTrait());
                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 |     let _wrongArity = Box[Int32, Bool](unknown);
 | }
error: expected 1 type parameters but got 2.
--> infer-type-class-constructor-err.dora:17:23
 |     let _conflict = Same[_](1i32, true);
 |     let _invalidBound = Bounded[_](DoesNotImplementTrait());
 |     let _wrongArity = Box[Int32, Bool](unknown);
                         ~~~~~~~~~~~~~~~~~~~~~~~~~
 | }
 | 
error: unknown identifier `unknown`.
--> infer-type-class-constructor-err.dora:17:40
 |     let _conflict = Same[_](1i32, true);
 |     let _invalidBound = Bounded[_](DoesNotImplementTrait());
 |     let _wrongArity = Box[Int32, Bool](unknown);
                                          ~~~~~~~
 | }
 | 
6 errors found.
